Use media queries to fix new cocktail sizing on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -689,7 +689,7 @@ img {
   grid-template-rows: 380px 5px 50px;
 }
 
-@media only screen and (max-width: 440px) {
+@media only screen and (max-width: 470px) {
   .new-card {
     height: 1000px;
   }
